@@ -8,7 +8,7 @@ import nl.jixxed.eliteodysseymaterials.templates.odyssey.OdysseyTab;
 
 public class OdysseyMaterialTab extends OdysseyTab {
 
-    private static final double SCROLL_SPEED = 0.005;
+    private static final double SCROLL_SPEED = 0.01;
     private ScrollPane scrollPane;
     private OdysseyMaterialOverview materialOverview;
 
@@ -23,7 +23,8 @@ public class OdysseyMaterialTab extends OdysseyTab {
         this.scrollPane.setContent(this.materialOverview);
         this.setContent(this.scrollPane);
         this.scrollPane.getContent().setOnScroll(scrollEvent -> {
-            final double deltaY = scrollEvent.getDeltaY() * SCROLL_SPEED;
+            final double speed = this.scrollPane.getHeight() / this.scrollPane.getContent().getLayoutBounds().getHeight();
+            final double deltaY = scrollEvent.getDeltaY() * speed * SCROLL_SPEED;
             this.scrollPane.setVvalue(this.scrollPane.getVvalue() - deltaY);
         });
     }
